added 2 player logic

--- a/black_jack/app/assets/stylesheets/game.scss
+++ b/black_jack/app/assets/stylesheets/game.scss
@@ -7,3 +7,12 @@
   height: 150px;
   border: 1px black solid;
 }
+
+.hand {
+  display: inline-block;
+}
+
+.container {
+  width: 45%;
+  display: inline-block;
+}
