--- a/black_jack/app/views/rooms/show.html.erb
+++ b/black_jack/app/views/rooms/show.html.erb
@@ -3,3 +3,9 @@
 <div id="game_cards">
   <%= render @game_cards %>
 </div>
+
+<div id="cards">
+  <%= render @cards if @game.started %>
+</div>
+
+<%= render partial: "partials/game_actions" %>
