join button now adds player to game

--- a/black_jack/app/views/layouts/application.html.erb
+++ b/black_jack/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
+    <% if @game && !@game.started %>
+      <nav>
+        <div class="pregame">
+          <button id="join" data-behavior="room_speaker" class="btn">Join</button>
+          <button id="start-game" data-behavior="room_speaker" class="btn">Start Game</button>
+        </div>
+      </nav>
+    <% end %>
+
+    <% if @current_user %>
+      <li id="sign-out"><%= link_to "Sign Out", logout_path, method: :delete %></li>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
