players can connect to the same room

--- a/black_jack/app/views/rooms/show.html.erb
+++ b/black_jack/app/views/rooms/show.html.erb
@@ -1,7 +1,11 @@
-<h1>page works</h1>
-
 <div id="game_cards">
   <%= render @game_cards %>
+</div>
+
+<div class="history">
+  <div id="messages">
+    <%= render @messages %>
+  </div>
 </div>
 
 <div id="cards">
