--- a/black_jack/app/views/partials/_game_actions.html.erb
+++ b/black_jack/app/views/partials/_game_actions.html.erb
@@ -10,4 +10,8 @@
     </div>
 
   </div>
+
+  <div id="pocket-button">
+    <%= button_to "Pocket Cards", card_path(user_id: @current_user.id), method: :get, id: :pocket_cards, remote: true %>
+  </div>
 </div>
