--- a/black_jack/app/views/welcome/index.html.erb
+++ b/black_jack/app/views/welcome/index.html.erb
@@ -1,5 +1,3 @@
-<h1>This is index.html.erb</h1>
-
 <div class="sign-in hidden">
   <%= form_for( :session, url: login_path, method: :post) do | f | %>
     <%= f.label :username, class: "label" %>
@@ -22,5 +20,5 @@
   <% end %>
 </div>
 
-<h1 class="banner">Texas Holdem</h1>
+<h1 class="banner">BlackJack: The Gathering</h1>
 <div class="error"><%= flash[ :error ] %></div>
